--- a/unit_2/unit_2_ls_inst.ipynb
+++ b/unit_2/unit_2_ls_inst.ipynb
@@ -85,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "setwd('/Users/ericpenner/Desktop/Berkeley/Spring 2017 w203/Unit 2')\n",
+    "setwd('/Users/ericpenner/Desktop/Berkeley/W203_ls_repo/unit_2')\n",
     "Boston = read.csv(\"Boston_w203.csv\")\n",
     "library(car)\n",
     "library(repr)"
@@ -760,7 +760,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
