changed unit 1 to reflect R notebook software requirements

--- a/unit_1/unit_1_ls_all.tex
+++ b/unit_1/unit_1_ls_all.tex
@@ -83,6 +83,25 @@ Take 5 minutes to discuss these in breakouts, before our class-wide discussion.
 \item What mistake might result from confusing a sample mean for a population mean?
 \end{enumerate}
 
+\item \textbf{Software}
+\begin{enumerate} 
+    \item Apart from today I will use jupyter notebook with an R kernel to instruct you. In order so that you can participate in class you will need to install applications and packages in order to use these notebooks. 
+    \item Every system is different and in the life of a data scientist figuring out how to get and install useful software packages from tutorial and question/answers on the internet is an extremely valuable skill.  
+    \item Please do this by next week. 
+    \item One possible way to do it. 
+    \begin{itemize} 
+        \item Install R from CRAN: https://cran.r-project.org/
+        \item Install Anaconda: https://www.anaconda.com/download/\#macos
+        \item Update conda using conda: "conda update conda"
+        \item Install R-essentials package using conda: "conda install -c r r-essentials"
+        \item Install any other packages from CRAN or from Anaconda Cloud
+    \end{itemize}
+    \item You may find R studio (https://www.rstudio.com/products/rstudio/download/ or in Anaconda) useful to complete your homework.
+   
+\end{enumerate}
+
+
+
 \item \textbf{Reminders}\\
 Before next week:
 \begin{enumerate}
