completed sec2 and sec3

--- a/unit_2/unit_2_ls_sec2_ex.ipynb
+++ b/unit_2/unit_2_ls_sec2_ex.ipynb
@@ -116,8 +116,7 @@
    "source": [
     "setwd('')\n",
     "Boston = read.csv(\"Boston_w203.csv\")\n",
-    "library(car)\n",
-    "library(repr)"
+    "library(car)"
    ]
   },
   {
