Changes to section 4 and instructor version

--- a/unit_2/unit_2_ls_sec4_ex.ipynb
+++ b/unit_2/unit_2_ls_sec4_ex.ipynb
@@ -120,9 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in setwd(\"\"): cannot change working directory\n",
+     "execution_count": 9,
+     "output_type": "error",
+     "traceback": [
+      "Error in setwd(\"\"): cannot change working directory\nTraceback:\n",
+      "1. setwd(\"\")"
+     ]
+    }
+   ],
    "source": [
     "setwd('')\n",
     "Boston = read.csv(\"Boston_w203.csv\")\n",
@@ -161,10 +172,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "No documentation for ‘scatterplotMatrix’ in specified packages and libraries:\n",
+       "you could try ‘??scatterplotMatrix’"
+      ],
+      "text/latex": [
+       "No documentation for ‘scatterplotMatrix’ in specified packages and libraries:\n",
+       "you could try ‘??scatterplotMatrix’"
+      ],
+      "text/plain": [
+       "No documentation for ‘scatterplotMatrix’ in specified packages and libraries:\n",
+       "you could try ‘??scatterplotMatrix’"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "?scatterplotMatrix"
+   ]
   },
   {
    "cell_type": "markdown",
