added student responses to preclass ex for sec 2 and 3

--- a/unit_3/unit_3_ls_inst.ipynb
+++ b/unit_3/unit_3_ls_inst.ipynb
@@ -305,8 +305,15 @@
    "metadata": {},
    "source": [
     "> 2.4 Follow up:\n",
-    "> Would the amount of licensing revenue that the inventors recevied in a given time period help to better measure radicalness? "
+    "> Would the amount of licensing revenue that the inventors received in a given time period help to better measure radicalness? "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -321,7 +328,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
