Added review stuff to live session inst and sec3 with diagrams

--- a/unit_3/unit_3_ls_inst.ipynb
+++ b/unit_3/unit_3_ls_inst.ipynb
@@ -43,15 +43,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.0 Probability Practice\n",
-    "Complete the following probability problems using the material you learned in this week's async"
+    "#### 1.0 Conditional Probability and Partitions Review\n",
+    "\n",
+    "Lets take a few minutes to review some core concepts in probability that will help us to complete our HW problems. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1.1** Suppose you're taking a statistics class and that in each week you are either caught up or behind on the readings. It is difficult to incorporate a new class in to your schedule so the probability that you will be caught up, having viewed all async and completed the pre class exercises before the live session, is 0.7. From then on, if you are caught up in a given week, the probability that you will be caught up in the next week is 0.7. If you are behind in a given week, the probability that you will be caught up in the next week is 0.4. What is the probability that you are caught up in week 3?"
+    "** State Space $\\Omega$ **: Is the collection of all possible outcomes of a given experiment \n",
+    "\n",
+    "* Rolling a 6 sided die: $\\Omega = \\{1,2,3,4,5,6\\}$\n",
+    "* 5 Card Poker Hand: $\\Omega$ = all 2,598,960 possible hands.  \n",
+    "\n",
+    "<center>![title](diag_11.png)</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Partition of $\\Omega$ **: Is a collection of events $A_1,A_2,\\cdots, A_N$ with 3 properties\n",
+    "\n",
+    "1. $A_j \\subset \\Omega$ for all $j \\in \\{1,2,3,\\cdots, N\\}$\n",
+    "\n",
+    "2. $A_i \\cap A_j = \\emptyset$ whenever $i \\neq j$\n",
+    "\n",
+    "3. $A_1 \\cup A_2 \\cup \\cdots \\cup A_N = \\Omega$\n",
+    "\n",
+    "In other words, each event $A_j$ is made up of outcomes in $\\Omega$, No two $A_j$'s overlap/share the same outcome, together all $A_j$'s combine to equal $\\Omega$ \n",
+    "<center>![title](diag_22.png)</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Partitions allow us to take complex events which may be difficult to address directly and decompose it into simpler events which are easier to deal with. Now consider, \n",
+    "\n",
+    "1.) If $B\\subset \\Omega$ and $A_1,A_2,\\cdots, A_N$ is a partition of $\\Omega$ then, \n",
+    "$$ B = (A_1\\cap B)\\cup(A_2 \\cap B) \\cup \\cdots \\cup (A_N \\cap B) $$\n",
+    "\n",
+    "2.) If $A_i\\cap A_j= \\emptyset$ then \n",
+    "$$B\\cap(A_i\\cap A_j) = (B\\cap A_i)\\cap(B\\cap A_j) = \\emptyset $$ \n",
+    "\n",
+    "3.) If $A\\cap B = \\emptyset$ then \n",
+    "$$ P(A\\cup B) = P(A) + P(B)  - P(A\\cap B) = P(A) + P(B)  - P(\\emptyset) = P(A) + P(B)  $$\n",
+    "\n",
+    "Combining all these gives\n",
+    "$$  P(B) = P\\big[ (A_1\\cap B)\\cup(A_2 \\cap B) \\cup \\cdots \\cup (A_N \\cap B) \\big] = \\sum_{i=1}^N P(A_i \\cap B) $$\n",
+    "\n",
+    "** Conditional Probability ** \n",
+    "$$ P(C|B) = \\frac{ P( C \\cap B)  }{P(B)}   \\iff P(C \\cap B) = P(C|B) P(B) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.0 Probability Practice\n",
+    "Complete the following probability problems using the material you learned in this week's async\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2.1** Suppose you're taking a statistics class and that in each week you are either caught up or behind on the readings. It is difficult to incorporate a new class in to your schedule so the probability that you will be caught up, having viewed all async and completed the pre class exercises before the live session, is 0.7. From then on, if you are caught up in a given week, the probability that you will be caught up in the next week is 0.7. If you are behind in a given week, the probability that you will be caught up in the next week is 0.4. What is the probability that you are caught up in week 3?"
    ]
   },
   {
@@ -133,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1.2** A test for certain disease is assumed to be correct 95\\% of the time: if a person has a disease the test will give a positive result with probability 0.95. If a person does not have disease the test will give a negative result with probability 0.95. A random person drawn from a certain population has a probability 0.001 of having the disease. Given that a person drawn at random just tested positive, what is the probability that they have the disease?"
+    "**2.2** A test for certain disease is assumed to be correct 95\\% of the time: if a person has a disease the test will give a positive result with probability 0.95. If a person does not have disease the test will give a negative result with probability 0.95. A random person drawn from a certain population has a probability 0.001 of having the disease. Given that a person drawn at random just tested positive, what is the probability that they have the disease?"
    ]
   },
   {
@@ -207,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.0 Patents and Operationalization Discussion\n",
+    "### 3.0 Patents and Operationalization Discussion\n",
     "\n",
     "Here we will discuss our pre class reading from Schoenmakers, W., Duysters, G., (2010), The Technological Origins of Radical Inventions, Research Policy 39, pp. 1051-1059. "
    ]
@@ -216,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.1** Schoenmakers and Duysters are particularly interested in radical inventions.  Explain what their conceptual definition is and how it is related to their operational definition."
+    "**3.1** Schoenmakers and Duysters are particularly interested in radical inventions.  Explain what their conceptual definition is and how it is related to their operational definition."
    ]
   },
   {
@@ -232,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 2.1 Follow up:\n",
+    "> 3.1 Follow up:\n",
     "> Does the choice of relying on patent data limit the type of inventions that they are studying? "
    ]
   },
@@ -240,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.2** In your opinion, does the author’s operational definition of radical invention have validity?  (does it have face validity?  construct validity?)"
+    "**3.2** In your opinion, does the author’s operational definition of radical invention have validity?  (does it have face validity?  construct validity?)"
    ]
   },
   {
@@ -256,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 2.2 Follow up:\n",
+    "> 3.2 Follow up:\n",
     "> Is there any reason to be suspicious of the process  by which citations are applied to each invention?"
    ]
   },
@@ -264,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.3** If you believe there is a discrepancy between the author’s operational definition of radical invention and the intended concept, how could this affect their conclusions?  What factors, other than whether an invention is radical, could be driving their results?"
+    "**3.3** If you believe there is a discrepancy between the author’s operational definition of radical invention and the intended concept, how could this affect their conclusions?  What factors, other than whether an invention is radical, could be driving their results?"
    ]
   },
   {
@@ -280,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 2.3 Follow up:\n",
+    "> 3.3 Follow up:\n",
     "> Suppose a patent examiner is assigned to apply citations to a patent that they have little domain knowledge about, what effect would this have on the authors analysis?  "
    ]
   },
@@ -288,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.4** In what other ways could you operationalize the concept of radical invention?"
+    "**3.4** In what other ways could you operationalize the concept of radical invention?"
    ]
   },
   {
@@ -304,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 2.4 Follow up:\n",
+    "> 3.4 Follow up:\n",
     "> Would the amount of licensing revenue that the inventors received in a given time period help to better measure radicalness? "
    ]
   },
