Removed repr package from unit 2 ls seemed to solve the saving problem, added some material to unit3 minor changes to unit 6

--- a/unit_6/unit_6_ls_inst.ipynb
+++ b/unit_6/unit_6_ls_inst.ipynb
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "options(repr.plot.height = 10, repr.plot.width = 15, repr.plot.pointsize = 22)\n",
+    "#options(repr.plot.height = 10, repr.plot.width = 15, repr.plot.pointsize = 22)\n",
     "mean_obs_rep1 <- replicate(100000, mean(rbinom(nobs,size=1,prob=p)))\n",
     "sd(mean_obs_rep1)\n",
     "hist(mean_obs_rep1, main = \"Mean of 3 observations from B(1,1/2), 100k replications\"\n",
