Updated section 1 Random variables discussion in unit 4 live session for both instructor version and exercises

--- a/unit_4/unit_4_ls_ex.ipynb
+++ b/unit_4/unit_4_ls_ex.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Random Variables\n",
+    "<h3> Random Variables </h3>\n",
     "<center>![title](baby.jpg)</center>"
    ]
   },
@@ -30,14 +30,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.0 Random Variables Group Discussion"
+    "<h3> 1 Random Variables Group Discussion </h3>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1.1** In weeks 1 and 2, we discussed the different types of variables that can be found in a dataset.  Is it correct to call these random variables?  If not, how are they related to random variables?"
+    "** Experiment: ** You have written the letters A through G on 7 seperate slips of paper and put them in a hat. After you have mixed up those piece of paper you ask someone to close their eyes and blindly choose one slip of paper out of the hat. The person then shows you the slip of paper with which you generate a number according to the following. \n",
+    "\n",
+    "$$ \n",
+    "X = \n",
+    "\\begin{cases} \n",
+    "    1 &  \\text{if shown  A } \\\\\n",
+    "    10 & \\text{if shown B or C } \\\\\n",
+    "    20 & \\text{if shown D or E or F } \\\\\n",
+    "    2  & \\text{if shown  G }\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.1** Is $X$ a random variable? If so how would you further categorize it? Either way, give a definition of what a random variable is to you. "
    ]
   },
   {
@@ -51,7 +69,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.0 Modeling A Fair Die\n",
+    "**1.2 ** Suppose you then define $Y = X^2$, is $Y$ a random variable? How about any function $f(X)$? Is your definition too narrow to include $Y$ and/or $f(X)$? What about $f(X) = 1$ for all values of $X$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> 2 Modeling A Fair Die </h3>\n",
     "\n",
     "The range of a discrete random variable is a discrete set of real numbers, $O$.  Much of the time, the range will simply be a finite set of numbers. For any value k in the range, $0 \\leq P(X=k) \\leq 1$. The sum over all values k in the range is 1, i.e. $\\sum_{k \\in O} P(X=k)=1$."
    ]
@@ -145,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.0 Modeling a (Possibly) Fair Coin"
+    "<h3> 3 Modeling a (Possibly) Fair Coin </h3>"
    ]
   },
   {
@@ -215,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.0 The 'Pyramid' Distribution"
+    "<h3> 4 The 'Pyramid' Distribution </h3>"
    ]
   },
   {
@@ -287,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.0 Exponential Decay"
+    "<h3> 5 Exponential Decay </h3>"
    ]
   },
   {
@@ -334,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 6.0 Modeling an American Delicacy"
+    "<h3> 6 Modeling an American Delicacy </h3>"
    ]
   },
   {
@@ -385,7 +417,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.3"
+   "version": "3.4.1"
   }
  },
  "nbformat": 4,
